# tr-autonomy-1-tekkaonigiri

./: .gitignore  README.md
src/spinnything/: .gitignore  LICENSE  environment.yml  package.xml  setup.cfg  setup.cpp  setup.py
src/spinnything/spinnything/: spinnything.py  util.py
src/your_solution/: CMakeLists.txt  package.xml
src/your_solution/src/: spin_slow_update.cpp  spin_slow_update.h  spin_sol.cpp  spin_sol.h
